fix wrong vertical align of hamburger icon

--- a/style.css
+++ b/style.css
@@ -406,10 +406,6 @@ navigation buttons
         vertical-align: middle;
     }
 
-    #icon-hamburger {
-        padding-bottom: 4px;
-    }
-
     #icon-hamburger.open {
         transform: rotate(90deg);
     }
